# fcc-demographic-data-analyzer

./: README.md  main.py  pyproject.toml
src/: demographic_data_analyzer.py
tests/: test_module.py
